# anylist_cli

./: .gitignore  .secrets.baseline  .test_env  README.md  TODO.md  add.sh  anyList_CLI.js  config.js  list.sh  main.py  package.json  pyproject.toml  remove.sh  select_list.sh  show-active-items.js  test_add.sh  test_and_getListID.js  test_anyList_CLI.js  test_list.sh  test_show-active-items.js  tick-active-items.js
.roo/: mcp.json
js/: add.js  select-view-list.js  test_anyList_CLI.js  test_select-view-list.js  tick-active-items.js  update-item.js
py/: add.py  list.py
py/lib/: anylist.proto  anylist.py  anylist_pb2.py  ingredient.py  item.py  list.py  meal_planning_calendar_event.py  meal_planning_calendar_label.py  recipe.py  recipe_collection.py  uuid.py
py/tests/: test_add.py
